# libquicr

./: .clang-format  .clang-tidy  .git-blame-ignore-revs  .gitignore  .gitmodules  AUTHORS.md  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  REUSE.toml  build.Dockerfile  build_mvfst.md  index.html  run_mvfst_example.md  update_deps_commit.sh
benchmark/: .clang-tidy  CMakeLists.txt  cache_buffer.cpp  client_session.cpp  data_storage.cpp  extensions.cpp  hash.cpp  hex_endec.cpp  message_buffer.cpp  messages.cpp  name.cpp  namespace.cpp  priority_queue.cpp  safe_time_queue.cpp  serial_buffer.cpp  serializer.cpp  serializer_buffer.cpp  shared_memory.cpp  stream_buffer.cpp  tick_service.cpp  time_queue.cpp  uintvar.cpp
c-bridge/: CMakeLists.txt  README.md  quicr-bridge.pc.in
c-bridge/examples/: README.md  chat.c  fetch.c  file_transfer.c  simple_publisher.c  simple_subscriber.c
c-bridge/include/quicr/: quicr_bridge.h
c-bridge/src/: quicr_bridge.cpp
certs/: LICENSE
cmake/: AddGitSubmodule.cmake  FindMbedTLS.cmake  FindOpenSSL.cmake  (+4 more)
cmd/chatty/: CMakeLists.txt
cmd/chatty/include/: ChannelMsgDelegate.h  ChatClient.h  Message.h
cmd/chatty/src/: ChannelMsgDelegate.cpp  ChatClient.cpp  Message.cpp  main.cpp
cmd/examples/: CMakeLists.txt  client.cpp  helper_functions.h  server.cpp  signal_handler.h
cmd/forty/: CMakeLists.txt  forty-bytes.cpp
cmd/moq-example/: CMakeLists.txt  client.cpp  server.cpp  subscription.h
cmd/moqr/: CMakeLists.txt  async_queue.h  moqe.cpp  moqe.h  moqr.h  pub_delegate.cpp  pub_delegate.h  qsession.cpp  qsession.h  server_delegate.cpp  server_delegate.h  sub_delegate.h  uri_convertor.h
cmd/moqtests/: CMakeLists.txt  dataClient.cpp  moqTestClient.cpp  moqTestServer.cpp  subscription.cpp  subscription.h  uri_convertor.h
cmd/perf/: CMakeLists.txt  perf.cpp
cmd/qcurl/: CMakeLists.txt  fake_transport.h  fake_transport_delegate.h  main.cpp  publisher.cpp  publisher.h  subscriber.cpp  subscriber.h
cmd/qperf/: CMakeLists.txt  qperf.cpp  qperf_sub.cpp  run_qperf.py
cmd/qperf2/: CMakeLists.txt  config-audio.ini  config-av.ini  config.ini  inicpp.h  qperf.hpp  qperf_pub.cc  qperf_pub.cpp  qperf_pub.hpp  qperf_sub.cc  qperf_sub.cpp  qperf_sub.hpp  run_parallel.sh  utils.cpp  utils.hpp
cmd/really/: CMakeLists.txt  really.cpp  reallyTest.cpp  subscription.cpp  subscription.cxx  subscription.h  testLogger.cpp  testLogger.h
dependencies/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
fuzz/: CMakeLists.txt  ctrl_messages_fuzzer.cpp
mlstest/: CMakeLists.txt  CTestTestfile.cmake  Makefile  MlsUserSession.cpp  QuicrMessageProxy.h  TODO.md  cmake_install.cmake  fake_config.h  main.cpp  mls_session.h  mls_user_session.cpp  mls_user_session.h  pub_delegate.cpp  pub_delegate.h  quicr_client_helper.cpp  quicr_client_helper.h  quicr_client_secure.cpp  quicr_client_secure.h  quicr_mlstest  quicr_mlstest_include-b858cb2.cmake  quicr_mlstest_tests-b858cb2.cmake  sub_delegate.cpp  sub_delegate.h  testLogger.cpp  testLogger.h
src/: CMakeLists.txt  base_track_handler.cpp  client.cpp  ctrl_message_types.cpp  ctrl_messages.cpp  custom_event_loop.cpp  custom_event_loop.h  encode.cpp  encode.h  fetch_track_handler.cpp  fragment_assembler.cpp  fragment_assembler.h  helpers.h  joining_fetch_handler.cpp  measurement.cpp  message_buffer.cpp  message_buffer.h  messages.cpp  metrics_exporter.cpp  metrics_exporter.h  moq_instance.cpp  moq_message.cpp  moq_messages.cpp  moq_session.cpp  moq_session.h  moq_track_delegate_base.cpp  moqt_validate.cpp  multi_track_subscribe_handler.cpp  multi_track_subscribe_handler_stubbed.cpp  pub_sub_registry.cpp  pub_sub_registry.h  publish_fetch_handler.cpp  publish_namespace_handler.cpp  publish_track_handler.cpp  quic_identifier.h  quic_transport.cpp  quiche_types.h  quicr_client.cpp  quicr_client_h3_connection.cpp  quicr_client_h3_connection.h  (+33 more)
src/client_raw_sessions/: datagram_session.h  per_category_session.h  per_group_session.h  per_object_session.h  stream_session_base.h
src/h3/: fragment_assembler.cpp  fragment_assembler.h  h3_common.h  h3_connection_base.cpp  h3_connection_base.h  pub_sub_registry.cpp  pub_sub_registry.h  quic_identifier.h  quiche_api_lock.cpp  quiche_api_lock.h  quiche_types.cpp  quiche_types.h  quicr_client_h3_connection.cpp  quicr_client_h3_connection.h  quicr_client_h3_session.cpp  quicr_client_h3_session.h  quicr_server_h3_connection.cpp  quicr_server_h3_connection.h  quicr_server_h3_session.cpp  quicr_server_h3_session.h  transport_api_lock.cpp  transport_api_lock.h  transport_delegate.h
src/moq/: client.cpp  message_buffer.h  messages.cpp  messages.h  publish_track_handler.cpp  publish_track_handler_base.cpp  receive_message_handler.cpp  serializer.cpp  server.cpp  server_publish_track_handler_base.cpp  transport.cpp
src/moqt/: messages.cpp  track_delegate_base.cpp
src/quic/: transport.cpp  transport_picoquic.cpp  transport_picoquic.h
src/quic/include/: priority_queue.h  span.h  stream_buffer.h  time_queue.h  transport.h  transport_metrics.h
src/quic/src/: transport.cpp  transport_picoquic.cpp  transport_picoquic.h  transport_udp.cpp  transport_udp.h  transport_udp_protocol.h
test/: CMakeLists.txt  cache.cpp  cache_buffer.cpp  client.cpp  data_storage.cpp  encode.cpp  end_to_end_test.cpp  fake_transport.h  hex_endec.cpp  main.cpp  moq-codec.cpp  moq_both_messages.cpp  moq_ctrl_messages.cpp  moq_data_messages.cpp  moq_instance.cpp  moq_message.cpp  moq_messages.cpp  moq_test.cpp  moqt_messages.cpp  moqt_test.cpp  name.cpp  namespace.cpp  priority_queue.cpp  quicr_client.cpp  quicr_server.cpp  sanitizer_options.cpp  session.cpp  shared_memory.cpp  stream_buffer.cpp  subscribe_track_handler.cpp  subscription_filters.cpp  tick_service.cpp  time_queue.cpp  track_handlers.cpp  track_namespace.cpp  uintvar.cpp
test/fuzz/: CMakeLists.txt  ctrl_messages_fuzzer.cpp
test/integration_test/: CMakeLists.txt  callback_subscribe_handler.cpp  callback_subscribe_handler.h  integration_test.cpp  test_client.cpp  test_client.h  test_server.cpp  test_server.h  tsan.supp
(+1074 files in other folders)
